recursion.cons.butnlast.ButNlast.scala.error
Erreur de compilation :
ButNlast:19: error: not found: value length_list
  length_list = length(l)
  ^ButNlast:31: error: not found: value length_list
  compute_nfirst(l, length_list - n, List())
                    ^ButNlast:34: error: type mismatch;
 found   : Unit
 required: List[Int]
}
^